--- a/CustomerApp/app/src/main/res/layout/activity_order.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order.xml
@@ -15,13 +15,50 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
+
+        <ExpandableListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            
+        </ExpandableListView>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorOrange"
-        android:layout_weight="4">
+        android:layout_weight="4"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:text="Totaal:"
+            android:textSize="25dp"
+            android:gravity="center_vertical"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="0,00"
+                android:textSize="25dp"
+                android:gravity="center_vertical"
+                />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:src="@drawable/icon_bestellen"
+            />
+
     </LinearLayout>
 
 </LinearLayout>
