--- a/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
@@ -1,9 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -56,26 +51,49 @@
         android:id="@+id/MyOrdersID"
         >
 
-        <ImageView
-            android:id="@+id/imageView2"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/colorBackground"
-            android:src="@drawable/ic_list" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColor="@android:color/white"
-            android:text="@string/my_orders_button"
-            android:gravity="center_horizontal|center_vertical"
-            android:textSize="20dp"
-            android:layout_weight="2"
-            android:background="@color/colorBackground"
-            />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/colorBackground"
+                    android:src="@drawable/ic_list" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textColor="@android:color/white"
+                    android:text="@string/my_orders_button"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:textSize="20dp"
+                    android:layout_weight="2"
+                    android:background="@color/colorBackground"
+                    />
+            </LinearLayout>
+
+            <ImageButton
+                android:layout_marginRight="15dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="@drawable/circle"
+                android:id="@+id/unhandledOrderButton"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                />
+        </RelativeLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -134,14 +152,3 @@
     </LinearLayout>
 
 </LinearLayout>
-
-    <ImageButton
-        android:layout_margin="15dp"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:background="@drawable/circle"
-        android:id="@+id/unhandledOrderButton"
-        android:layout_gravity="right|bottom"
-        android:translationY="-265dp"/>
-
-</FrameLayout>
