--- a/EmployeeApp/app/src/main/res/values-v21/styles.xml
+++ b/EmployeeApp/app/src/main/res/values-v21/styles.xml
@@ -1,16 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
 
     <style name="BestelApp" parent="Theme.AppCompat">
         <item name="android:colorBackground">#001734</item>
         <item name="colorAccent">#FF9600</item>
+        <item name="android:navigationBarColor">@android:color/black</item>
+        <item name="android:statusBarColor">#d87f00</item>
         <item name="colorPrimary">#FF9600</item>
     </style>
 
@@ -18,6 +13,6 @@
         <item name="colorPrimary">#FF9600</item>
         <item name="colorAccent">#FF9600</item>
         <item name="android:colorBackground">#001734</item>
+        <item name="android:statusBarColor">#d87f00</item>
     </style>
-
 </resources>
