--- a/EmployeeApp/app/src/main/res/values/colors.xml
+++ b/EmployeeApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorGrayWhite">#f2f2f2</color>
+
+    <color name="NavigationBarDark">#1c1c1c</color>
+
+    <color name="colorOrange">#FF9600</color>
+    <color name="colorBackground">#001734</color>
+
 </resources>
