--- a/CustomerApp/app/src/main/res/layout/activity_handled_order_history_detail.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_handled_order_history_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorBackground"
-    tools:context="com.periode4groep2.customerapp.PresentationLayer.UnhandledOrderHistoryDetailActivity">
+    tools:context="com.periode4groep2.customerapp.PresentationLayer.HandledOrderHistoryDetailActivity">
 
     <include
         android:id="@+id/tool_bar"
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:layout_marginRight="10dp"
-                android:text="Nee"
+                android:text="Ja"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -116,14 +116,14 @@
             android:orientation="horizontal">
 
             <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/totalPriceText"
-            android:text="Totaal:"
-            android:textColor="@color/colorOrange"
-            android:textSize="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/totalPriceText"
+                android:text="Totaal:"
+                android:textColor="@color/colorOrange"
+                android:textSize="16dp"
                 android:textStyle="bold"
-            android:layout_marginLeft="15dp"/>
+                android:layout_marginLeft="15dp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -138,7 +138,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/payButton"
+            android:id="@+id/orderAgainButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -146,7 +146,7 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
             android:background="@color/colorOrange"
-            android:text="Nu betalen"
+            android:text="Opnieuw bestellen"
             android:textSize="18dp" />
 
     </LinearLayout>
