--- a/EmployeeApp/app/src/main/res/layout/activity_login_test.xml
+++ b/EmployeeApp/app/src/main/res/layout/activity_login_test.xml
@@ -1,9 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.periode4groep2.employeeapp.PresentationLayer.LoginTest">
+    android:background="@color/colorBackground"
+    tools:context="com.periode4groep2.employeeapp.PresentationLayer.LoginTest"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <include
+        android:id="@+id/tool_bar_no_button"
+        layout="@layout/tool_bar_no_button"
+        ></include>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="GOEDZO JONGEN"
+            android:textColor="@color/colorWhite"
+            android:gravity="center"
+            android:textSize="80dp"/>
+
+    </LinearLayout>
+
+</LinearLayout>
