--- a/EmployeeApp/app/src/main/res/layout/activity_login_test.xml
+++ b/EmployeeApp/app/src/main/res/layout/activity_login_test.xml
@@ -18,8 +18,9 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="GOEDZO JONGEN"
             android:textColor="@color/colorWhite"
             android:gravity="center"
