--- a/CustomerApp/app/src/main/res/layout/activity_order.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order.xml
@@ -72,7 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:text="@string/pay"
+            android:text="@string/order_activity_orderButton"
             android:gravity="center"
             android:textSize="25dp"
             />
