--- a/CustomerApp/app/src/main/res/layout/activity_scan.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_scan.xml
@@ -15,7 +15,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2">
+        android:layout_weight="30">
         <ImageView
             android:id="@+id/scan_icon"
             android:src="@drawable/ic_action_tick"
@@ -27,11 +27,15 @@
     </FrameLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        >
 
         <Button
             android:id="@+id/scan_button"
@@ -42,14 +46,6 @@
             android:background="@color/colorOrange"
             android:layout_gravity="bottom"
             android:textSize="18dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="TEST"
-            android:layout_weight="1"
-            android:gravity="center_horizontal|center_vertical"
-            />
     </LinearLayout>
 
 </LinearLayout>
